update with twitter details and 3 year anniversary

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,7 @@
 <p>
+  <span><a href="http://twitter.com/GitPub_Shef">Twitter</a></span>
+</p>
+<hr>
+<p>
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
